packages/rspack/tests/configCases/errors/experiments-disable-transform-parse-error/webpack.config.js
module.exports = {
	module: {
		rules: [
			{
				test: /\.jsx?$/,
				type: "javascript/auto"
			}
		]
	},
	experiments: {
		rspackFuture: {
			disableTransformByDefault: true
		}
	}
};
